--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,12 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
 }
 
-body {
-    font-family: 'Times New Roman', Times, serif;
+h1, h2, h3 {
+    font-family: 'Roboto Slab', serif;
+    color: #464646;
 }
-
 
 /* Header ================*/
 
@@ -26,6 +27,12 @@ body {
     text-align: center;
     margin-left: 90px;
 }
+
+.title-home a {
+    text-decoration: none;
+    color: #464646;
+}
+
 .title-home h1 {
    letter-spacing: 10px;
 }
@@ -57,7 +64,7 @@ body {
 .news {
     font-size: 12px;
     display: block;
-    color: rgb(70, 70, 70);
+    color: #464646;
     text-decoration: none;
     text-align: center;
 }
@@ -65,7 +72,7 @@ body {
 .help:hover,
 .news:hover,
 .side-bar a:hover {
-    color: rgba(128, 128, 128);
+    color: #808080;
 }
 
 .help {
@@ -77,20 +84,20 @@ body {
 /* Side-bar ================*/
 
 .side-bar {
-    height: 250px;
+    height: 260px;
     width: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     z-index: 10;
-    background-color: #fff;
+    background-color: rgba(250, 250, 250, 0.953);
 }
 
 .side-bar h2,
 .side-bar a {
     display: block;
     text-align: center;
-    color: rgb(70, 70, 70);
+    color: #464646;
     padding: 12px;
     text-decoration: none;
 }
@@ -135,7 +142,7 @@ body {
 footer {
     height: 100px;
     width: 100%;
-    background-color: rgba(231, 229, 229, 0.199);
+    background-color: rgba(231, 229, 229, 0.2);
     margin-top: 35px;
 }
 
@@ -165,5 +172,12 @@ footer p {
 
     .title-home {
         margin-left: 0;
+    }
+}
+
+@media (max-width: 360px) {
+    .side-bar h2,
+    .side-bar a {
+        padding: 11px;
     }
 }
