--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -35,6 +35,7 @@
     display: flex;
     flex-direction: column;
     margin-left: 15px;
+    margin-bottom: 6px;
 }
 
 .section-models button {
@@ -78,6 +79,11 @@
 .buttons.button2 {
     align-items: flex-end;
     margin-right: 15px;
+}
+
+/* Carousel ############ */
+.react-swipe-container.carousel {
+    width: 350px;
 }
 
 
